@startuml
package es.urjc.mastermind {
    class MasterMind
}

package es.urjc.mastermind.models {
    class Game
}

package es.urjc.mastermind.views {
    class View
}

MasterMind *--> Game
MasterMind *--> View
@enduml

@startuml
package es.urjc.mastermind.views{
    class View
    class StartView
    class PlayView
    class ResumeView
    class BoardView
    class ResultView
    class PlayerView
    class MakerPlayerView
    class BreakerPlayerView
    class SecretCombinationView
    class ProposedCombinationView
    class ColorView
    class ErrorView
    class MessageView
}

package es.urjc.mastermind.models{
    class MasterMind
}

package es.urjc.utils{
    class Console
    class YesNoDialog
}

PlayerView <|--- MakerPlayerView
PlayerView <|--- BreakerPlayerView

View *---> MasterMind
View *---> StartView
View *---> PlayView
View *---> ResumeView

PlayView ..> BoardView
PlayView ..> PlayerView
BoardView ..> ResultView
ResultView ..> ProposedCombinationView
BreakerPlayerView ..> ProposedCombinationView
MakerPlayerView ..> SecretCombinationView
ProposedCombinationView ..> ColorView
BoardView ..> MessageView
ResultView ..> MessageView
ProposedCombinationView ..> MessageView
ProposedCombinationView ..> ErrorView
ResumeView ..> MessageView
MessageView ..> Console
MessageView ..> YesNoDialog
@enduml

@startuml
package es.urjc.mastermind.models{

    class MasterMind
    class Board
    class Turn
    class Player
    class MakerPlayer
    class BreakerPlayer
    class Combination
    class ProposedCombination
    class SecretCombination
    class Result
    enum Color
    enum Error
}

Player <|-- MakerPlayer
Player <|-- BreakerPlayer

Combination <|--- SecretCombination
Combination <|--- ProposedCombination

MasterMind *--> Board
MasterMind *--> Turn
Turn *--> Player
Combination *--> Color
Player *--> Board
BreakerPlayer *--> SecretCombination
MakerPlayer o--> ProposedCombination
Board *--> Result
Board *--> SecretCombination
Board *--> ProposedCombination
Result *--> ProposedCombination
ProposedCombination ..> Error
@enduml

@startuml
package es.urjc.utils {
    class Console
    class YesNoDialog
}

YesNoDialog *--> Console
@enduml